Update About section and collaborators
- Expanded About section with autonomous driving emphasis
- Changed 'Collaborating Institutions' to 'Collaborators'
- Added UC San Diego LISA, CMCR, and CREL as collaborators
- Changed ampersand to 'and' with Oxford comma in lab name

--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Mi3 Lab
-description: Machine Intelligence, Interaction & Imagination
+description: Machine Intelligence, Interaction, and Imagination
 url: "https://mi3-lab.github.io"
 baseurl: ""
 
 # Lab info
 lab_name: Mi3 Lab
-lab_full_name: Machine Intelligence, Interaction & Imagination
+lab_full_name: Machine Intelligence, Interaction, and Imagination
 university: University of California, Merced
 department: Computer Science and Engineering
 email: rossgreer@ucmerced.edu
