--- a/_config.yml
+++ b/_config.yml
@@ -32,5 +32,5 @@ navigation:
     url: /publications
   - title: Prospective Members
     url: /prospective
-  - title: Gallery
+  - title: Highlights & Gallery
     url: /gallery
